# rmsfplot

./: README.md  pyproject.toml
src/rmsfplot/: rmplot.py
test/: test_script.py
